fix align text in button, fix popup, add 3th tops colors and other

--- a/app/blocks/header/header.styl
+++ b/app/blocks/header/header.styl
@@ -13,7 +13,7 @@
 			padding 5px 0
 		+above($md)
 			padding 8px 0
-			.header__logo-image 
+			.header__logo-image
 				max-height 9rem
 		+above($xl)
 			padding 8px 0
@@ -41,8 +41,8 @@
 			max-width 16.8rem
 	&__login-button
 		font-family $bor
+		padding 16px 0 9px
 		width 100px
-		height 40px
 		font-size 2.2rem
 		transition .3s
 		color $b
@@ -54,8 +54,8 @@
 		align-items center
 		justify-content center
 		+above($xl)
-			height 5rem
 			width 11rem
+			padding 21px 0 14px
 
 		&:hover
 			color $blue
@@ -80,7 +80,7 @@
 			line-height 3rem
 			color $b
 			margin-right 1.4rem
-	&__link 
+	&__link
 		display flex
 		align-items center
 		justify-content flex-end
@@ -90,17 +90,17 @@
 		margin-right 4.5rem
 		+below($lg)
 			display none
-		&-item 
+		&-item
 			margin-right 3.5rem
 			display flex
 		&-href
 			text-decoration none
 			font-size 1.8rem
 			font-weight bold
-			color $b 
+			color $b
 			transition .3s
 			&:hover
-				color $blue	
+				color $blue
 	// &__container
-	// 	&.active 
-	// 		background $w 
+	// 	&.active
+	// 		background $w
