--- a/app/blocks/rating/rating.styl
+++ b/app/blocks/rating/rating.styl
@@ -156,7 +156,7 @@
 			&-button
 				display none
 				+above($md)
-					display flex 
+					display flex
 					justify-content center
 					align-items center
 					width 6rem
@@ -166,19 +166,22 @@
 					border 2px solid $grey
 					transition .3s
 					box-shadow 0 5px 15px transparent
+					top 30%
 					&:after
 						display none
 					&.swiper-button-prev
 						transform scale(-1, 1)
 					&.swiper-button-next
-						.icon 
+						.icon
 							margin-left 4px
 					&:hover
 						background linear-gradient(283.38deg, #008EF4 0, #63D4FF 100%, #63D4FF 100%)
 						box-shadow 0 5px 15px rgba(44, 173, 250, .37)
 						border-color $w
-						.icon 
+						.icon
 							stroke $w
+				+above($xxl)
+					top 27%
 			&-slide
 				transition .5s
 				.rating__image-wrap_capitan
