--- a/app/styles/app.styl
+++ b/app/styles/app.styl
@@ -25,7 +25,7 @@ import('helpers/svg-size')
 	color $b
 	text-align center
 	+above($xl)
-		max-width 55% 
+		max-width 55%
 
 .container
 	padding 0 1.5rem
@@ -69,18 +69,17 @@ import('helpers/svg-size')
 		font-family $bor
 		color $w
 		position relative
-		padding 0 4rem
+		padding 2.1rem 4rem 1.4rem
 		min-width 16rem
-		height 6rem
 		display flex
 		justify-content center
 		align-items center
 		border-radius 30px
 		background transparent
-		overflow hidden 
+		overflow hidden
 		box-shadow 0 5px 15px rgba(44, 173, 250, .37)
 		z-index 1
-		&:before, &:after 
+		&:before, &:after
 			content ''
 			display block
 			width 100%
@@ -89,10 +88,10 @@ import('helpers/svg-size')
 			top 0
 			transition .5s
 			z-index -1
-		&:before 
+		&:before
 			left 0
 			background linear-gradient(81.27deg, #008EF4 0%, #63D4FF 100%, #008EF4 150%)
-		&:after 
+		&:after
 			left 100%
 			background linear-gradient(302.38deg, #008EF4 0%, #63D4FF 100%, #63D4FF 100%)
 		&:hover
@@ -126,9 +125,9 @@ import('helpers/svg-size')
 	display inline-block
 	border-radius 50%
 	position absolute
-	&_blur 
+	&_blur
 		filter blur(20px)
-	&_sm 
+	&_sm
 		width 2.6rem
 		height 2.6rem
 		right 8.8rem
@@ -139,7 +138,7 @@ import('helpers/svg-size')
 		height 4.2rem
 		transform rotate(-75deg)
 		top 8.8rem
-		left 10rem  
+		left 10rem
 	&_xxl
 		width 13.4rem
 		height 13.4rem
@@ -157,12 +156,12 @@ import('helpers/svg-size')
 		height 3.7rem
 		transform rotate(-75deg)
 		top 8.8rem
-		left 5.7rem  
+		left 5.7rem
 	&_xl
 		width 11.4rem
 		height 11.4rem
 		right -5.4rem
-		top 6.8rem 
+		top 6.8rem
 		transform rotate(90deg)
 
 
